--- a/AnExplorer-4.1.1/app/build.gradle
+++ b/AnExplorer-4.1.1/app/build.gradle
@@ -125,6 +125,7 @@ dependencies {
     implementation 'com.github.javiersantos:AppUpdater:2.6.5'
     implementation 'com.nanohttpd:nanohttpd:2.2.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     freeImplementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     freeImplementation 'com.google.firebase:firebase-core:17.0.0'
